--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "nodemailer": "^7.0.12",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "resend": "^6.6.0"
@@ -23,6 +24,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20.19.27",
     "@types/nodemailer": "^7.0.4",
+    "@types/qrcode.react": "^1.0.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
