--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "qrcode.react": "^4.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "resend": "^6.6.0"
+    "resend": "^6.6.0",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
